gitops/components/maas/maas-api-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: maas
  namespace: redhat-ods-applications
  labels:
    app.kubernetes.io/part-of: modelops
  annotations:
    haproxy.router.openshift.io/rewrite-target: /
spec:
  path: /maas-api
  port:
    targetPort: 8443
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: maas-api
    weight: 100
